hrms-admin-front

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@shadcn/*": ["node_modules/@shadcn/*"]
     }
   },
   "include": ["src"],
